refactor(solon-webrx): mcp-server